Defaults Scrollbar fixed. Updated.

--- a/options.css
+++ b/options.css
@@ -25,8 +25,8 @@
 	*,
 	#qr input[type="checkbox"],
 	#updater #count:not(.new):after,
-	input[type="checkbox"],
 	form[name="delform"] div:not(.thread) label:after,
+	input[type="checkbox"],
 	#ft li,
 	#ft ul,
 	#options input:not([type="checkbox"]),
@@ -861,12 +861,41 @@
 	}
 /* Defaults: */
 	::-webkit-scrollbar-thumb {
-		border: 1px solid #ccc;
+		border: 1px solid #aaa;
+		background: #fff;
+	}
+
+	::-webkit-scrollbar-thumb:hover {
+		background: #ccc;
+	}
+
+	::-webkit-scrollbar-thumb:active {
+		background: #aaa;
+	}
+
+	::-webkit-scrollbar-track-piece,
+	::-webkit-scrollbar-corner,
+	::-webkit-scrollbar-resizer {
+		background: #ccc;
 	}
 
 	thumb {
 		-moz-appearance: none !important;
-		border: 1px #ccc solid;
+		border: 1px solid #aaa;
+		background: #fff;
+	}
+
+	thumb:hover {
+		background: #ccc;
+	}
+	
+	thumb:active {
+		background: #aaa;
+	}
+	
+	scrollbar,
+	scrollcorner {
+		background: #ccc !important;
 	}
 
 	#ft li,
@@ -892,6 +921,11 @@
 	input[type="checkbox"] {
 		border: none !important;
 		color: #aaa !important;
+	}
+
+	#updater #count:not(.new):after,
+	form[name="delform"] div:not(.thread) label:after {
+		color: #000 !important;
 	}
 
 	.pages b {
